[package]
name = "neos"
version = "0.4.0-alpha.0"
edition = "2021"
license = "MPL-2.0"
authors = ["ljoonal"]
description = "NeosVR's API in rust"
repository = "https://git.ljoonal.xyz/ljoonal/neos_rs"
documentation = "https://docs.rs/neos"
keywords = ["neos", "neosvr", "api", "rest"]
categories = ["api-bindings", "games"]

include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[badges]
maintenance = { status = "experimental" }

[lib]
name = "neos"
path = "src/lib.rs"

[features]
default = ["rand_util"]
api_client = ["minreq", "serde_json"]
rand_util = ["nanorand"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_with = { version = "2.0.0", features = ["json", "time_0_3"] }
time = { version = "0.3", default-features = false, features = [
  "serde-well-known",
] }
strum = { version = "0.24", features = ["derive"] }
serde_json = { version = "1", optional = true }

[dependencies.nanorand]
version = "0.7.0"
optional = true
features = ["wyrand", "tls"]
default-features = false

# The smallest fully featured HTTPS client that was found
[dependencies.minreq]
version = "2.6"
optional = true
features = ["https-rustls-probe", "json-using-serde"]

[dev-dependencies]
serde_json = { version = "1" }
once_cell = "^1.13"

[package.metadata.docs.rs]
features = ["api_client"]
rustdoc-args = ["--cfg", "nightly"]
