[package]
name = "neos"
version = "0.5.0"
edition = "2021"
license = "MPL-2.0"
authors = ["ljoonal"]
description = "NeosVR's API in rust"
repository = "https://github.com/onlivfe/neos_rs"
documentation = "https://docs.rs/neos"
keywords = ["neos", "neosvr", "api", "rest"]
categories = ["api-bindings", "games"]

include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[badges]
maintenance = { status = "experimental" }

[lib]
name = "neos"
path = "src/lib.rs"

[features]
default = ["rand_util"]
http_client = ["tokio", "governor", "reqwest"]
rand_util = ["nanorand"]

# By default we allows deserializing some things partially even with errors.
# Like skipping array entries with errors, which is not wanted for tests though.
debug = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_with = { version = "2.2.0", features = ["json", "time_0_3"] }
serde_json = { version = "1" }
time = { version = "0.3", default-features = false, features = [
  "serde-well-known",
] }
strum = { version = "0.24.1", features = ["derive"] }

# API client specifics
racal = { version = "0.1.0" }
#racal = { path = "../racal" }
governor = { version = "0.5", optional = true }
tokio = { version = "1", optional = true}
[dependencies.reqwest]
optional = true
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.nanorand]
version = "0.7.0"
optional = true
features = ["wyrand", "tls"]
default-features = false

[dev-dependencies]
tokio-test = "0.4.2"
tokio = { version = "1", features = ["rt", "macros"]}
once_cell = "1.17"

[package.metadata.docs.rs]
features = ["http_client"]
rustdoc-args = ["--cfg", "nightly"]
